--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ app.*.map.json
 /android/app/release
 
 .flutter-plugins
+lib/firebase_options.dart
+firebase.json
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
