--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   hydrated_bloc: ^10.1.1
   path_provider: ^2.1.5
+  firebase_core: ^4.2.0
 
 dev_dependencies:
   flutter_test:
